--- a/main.mustache
+++ b/main.mustache
@@ -7,14 +7,14 @@
 
 # KLV Injector SDK.NET
 **KLV Injector SDK.NET** is an "ITAR-free" library that provides stream/file playback and MISB KLV extraction/decoding functionality.  
-More [info](https://impleotv.com/products/sdks/stanagplayersdk/).
+More [info](https://impleotv.com/products/sdks/klvinjectorsdk-net/).
 
 ## System Requirements
 OS: Windows 10 64 bit.
 
 ## Installation
 
-**KLV Injector SDK.NET** can be downloaded as a **zip** file that contains installer. Unzip the **SetupStanagPlayerSDK.Net.zip** file and run the **SetupStanagPlayerSDK.Net.exe**.  
+**KLV Injector SDK.NET** can be downloaded as a **zip** file that contains installer. Unzip the **SetupStanagInjectorSDK.Net.zip** file and run the **SetupStanagInjectorSDK.Net.exe**.  
 The corresponding version of a low level binaries **StCore setup** (for redistribution) is also provided, along with the SDK. 
 
 ## Download links
@@ -22,7 +22,7 @@ The corresponding version of a low level binaries **StCore setup** (for redistri
 | Software | Version              | Download link                                                           | 
 |:-----|:-------------------------|:------------------------------------------------------------------------------|
 | **KLV Injector SDK.NET**  |  {{version}} | [SetupStanagInjectorSDK.Net.zip](https://github.com/impleotv/klv-injector-sdk-release/releases/latest/download/SetupStanagInjectorSDK.Net.zip) | 
-| **StCore**  |   | [StCoreSetup-x64.zip](https://github.com/impleotv/stanag-player-sdk-release/releases/latest/download/StCoreSetup-x64.zip) | 
+| **StCore**  |   | [StCoreSetup-x64.zip](https://github.com/impleotv/klv-injector-sdk-release/releases/latest/download/StCoreSetup-x64.zip) | 
 
 *Released on {{date}}*
 
