--- a/main.mustache
+++ b/main.mustache
@@ -45,6 +45,6 @@ C:\Program Files\ImpleoTV\StanagInjectorSdkNet\bin\x64\KlvInjectorTestApp.exe
 
 Please copy-paste *Node Info*, don't send an image...
 
-You'll get back a **license** file and a **key** that can be used in ***Activate*** method
+You'll receive a license file (or both a license file and a key for legacy licensing mechanism) that can be utilized in the Activate method.
 
 > For large quantities, please contact us for an **unlocked license**.
